--- a/todo/src/main/AndroidManifest.xml
+++ b/todo/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
   package="com.xander.todo">
 
   <application
-    android:name=".fragment.ToDoAppliation"
+    android:name=".ToDoAppliation"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
